--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -62,9 +62,18 @@ jobs:
     - name: Build Static
       run: npm run build
 
+    # 打印当前工作目录
     - name: Run a one-line script
-      run: pwd && ll
+      run: pwd
 
+    # 上传dist目录作为制品
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2.1.3
+      with:
+        # 制品名称
+        name: artifact # optional, default is artifact
+        # 一个文件, 一个目录 或者 通配符模式 上传
+        path: dist
     # - name: Create Release
     #   id: create_release
     #   uses: actions/create-release@v1
