--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ on:
 # 一个工作流的根节点jobs,以下可以定义多个job
 jobs:
   # 定义一个名为 build 的job
-  build:
+  release:
     # CI 或 job执行的环境
     runs-on: ubuntu-latest
 
@@ -54,36 +54,26 @@ jobs:
     - name: Build Static
       run: npm run build
 
-    # 上传dist目录作为制品
-    - name: Create A build Release and Artifact
-      uses: ncipollo/release-action@v1
-      with:
-        artifacts: "dist"
-        bodyFile: "dist"
-        token: ${{ secrets.GITHUB_TOKEN }}
-    #  uses: actions/upload-artifact@v2.1.3
-    #  with:
-    #    # 制品名称
-    #    name: artifact # optional, default is artifact
-    #    # 一个文件, 一个目录 或者 通配符模式 上传
-    #    path: dist
+    # 将编译后的dist制作成一个制品
+    - name: Create a Artifact
+     uses: actions/upload-artifact@v2.1.3
+     with:
+       # 制品名称
+       name: artifact # optional, default is artifact
+       # 一个文件, 一个目录 或者 通配符模式 上传
+       path: dist
 
-    # - name: Create Release
-    #   id: create_release
-    #   uses: actions/create-release@v1
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   with:
-    #     tag_name: v0.0.1112f1
-    #     release_name: Release v0.0.1112f1
-    #     draft: false
-    #     prerelease: false
-    # - name: Upload Release Asset
-    #   id: upload-release-asset
-    #   uses: actions/upload-release-asset@v1
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   with:
-    #     upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-    #     asset_path: dist/static/master-dev.tar.gz
-    #     asset_name: master-dev.tar.gz
+    # 创建一个Release
+    - name: Create a Release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+        draft: false
+        prerelease: false
