--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -74,6 +74,19 @@ jobs:
         name: artifact # optional, default is artifact
         # 一个文件, 一个目录 或者 通配符模式 上传
         path: dist
+    - name: Create a Release 
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+        draft: false
+        prerelease: false      
     # - name: Create Release
     #   id: create_release
     #   uses: actions/create-release@v1
