--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -81,8 +81,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: v0.0.2
+        release_name: Release ${{ github.ref }}1
         body: |
             Changes in this Release
             - First Change
